fix router for news page

--- a/FE/src/app/pages/news-details/news-details.component.html
+++ b/FE/src/app/pages/news-details/news-details.component.html
@@ -5,7 +5,7 @@
         <h2>New Details</h2>
         <ol>
           <li><a href="home">Home</a></li>
-          <li><a href="education">News</a></li>
+          <li><a href="news">News</a></li>
           <li>New Details</li>
         </ol>
       </div>
